# control_coding_challenge

./: .gitignore  CMakeLists.txt  README.md  index.md  package.xml  plugin.xml  setup.py
include/: sensor_fusion.h
launch/: slam.launch
msg/: NoiseMatrix.msg
resource/: MyPlugin.ui
scripts/: rqt_noise
src/: control_coding_challenge_node.cpp  sensor_fusion.cpp
src/control_coding_challenge/: my_module.py
src/rqt_noise/: my_module.py
